[package]
name = "rtthw"
version = "0.1.0"
edition = "2021"



[dependencies]
leptos = { version = "0.6.13", features = ["csr"] }
leptos_meta = { version = "0.6.13", features = ["csr"] }
leptos_router = { version = "0.6.13", features = ["csr"] }



[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
