[package]
name = "rtthw"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dreg = { git = "https://github.com/rtthw/dreg" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dreg = { git = "https://github.com/rtthw/dreg", default-features = false, features = [
    "wasm",
] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
